# SimpleMineMonitoring

./: Cargo.toml  build.rs  pipe.py
proto/: monitoring.proto
src/: client.rs  log_handler.rs  main.rs  process.rs  server.rs
